Fix: Rhode Island title + 3D scatter click handler

--- a/ri-report.html
+++ b/ri-report.html
@@ -259,7 +259,7 @@
  
  <!-- HERO / HOMEPAGE -->
  <div class="hero" style="padding:2rem 2rem 1.5rem">
- <h1>RI Real Estate Hub</h1>
+ <h1>Rhode Island Real Estate Hub</h1>
  <p class="subtitle" id="heroSubtitle">207,000+ Properties • 27 Towns • Updated Daily</p>
  </div>
  
