--- a/ri-results.html
+++ b/ri-results.html
@@ -152,7 +152,7 @@
             <!-- Property Types -->
             <div class="chart-card">
                 <div class="chart-title"><span class="emoji">🏠</span> Property Types</div>
-                <div style="height:220px"><canvas id="typeChart"></canvas></div>
+                <div style="height:200px;display:flex;align-items:center;justify-content:center"><canvas id="typeChart"></canvas></div>
                 <div class="chart-insight" id="typeInsight"></div>
             </div>
             
@@ -394,7 +394,7 @@
             new Chart(document.getElementById('typeChart'), {
                 type: 'doughnut',
                 data: { labels: typeData.map(t => t[0]), datasets: [{ data: typeData.map(t => t[1]), backgroundColor: ['#6366f1', '#ec4899', '#10b981', '#f59e0b', '#06b6d4', '#8b5cf6'], borderWidth: 0 }] },
-                options: { maintainAspectRatio: false, plugins: { legend: { position: 'right', labels: { boxWidth: 12, padding: 8, font: { size: 11 } } } } }
+                options: { maintainAspectRatio: false, cutout: '55%', plugins: { legend: { position: 'bottom', labels: { boxWidth: 10, padding: 6, font: { size: 10 } } } } }
             });
             // Type insight
             const topType = typeData[0];
