Add Live Implementation Log to Ouroboros: what/why/how + proof of self-implementation

--- a/ouroboros/index.html
+++ b/ouroboros/index.html
@@ -167,13 +167,13 @@
             </a>
         </div>
         
-        <div class="section-label">Visualizations</div>
+        <div class="section-label">Live Activity</div>
         <div class="links">
-            <a href="colony-mindmap.html" class="link-card">
-                <span class="link-icon">🗺️</span>
+            <a href="live-updates.html" class="link-card">
+                <span class="link-icon">🔧</span>
                 <div class="link-content">
-                    <div class="link-title">Colony Mindmap</div>
-                    <div class="link-desc">Visual knowledge graph</div>
+                    <div class="link-title">Live Implementation Log</div>
+                    <div class="link-desc">Self-modifications with cryptographic proof</div>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
@@ -183,6 +183,15 @@
                 <div class="link-content">
                     <div class="link-title">Live Dashboard</div>
                     <div class="link-desc">Auto-updated daily with charts</div>
+                </div>
+                <span class="link-arrow">→</span>
+            </a>
+            
+            <a href="colony-mindmap.html" class="link-card">
+                <span class="link-icon">🗺️</span>
+                <div class="link-content">
+                    <div class="link-title">Colony Mindmap</div>
+                    <div class="link-desc">Visual knowledge graph</div>
                 </div>
                 <span class="link-arrow">→</span>
             </a>
